add stats and healthcheck endpoints
