# openapi.yaml
@@ -12,6 +12,7 @@ tags:
   - name: Users
   - name: PullRequests
   - name: Health
+  - name: Stats
 
 components:
   parameters:
@@ -124,6 +125,15 @@ components:
         status:
           type: string
           enum: [OPEN, MERGED]
+    UserAssignmentStats:
+      type: object
+      required: [ user_id, assignment_count ]
+      properties:
+        user_id:
+          type: string
+        assignment_count:
+          type: integer
+          format: int64
 
 paths:
   /team/add:
@@ -423,3 +433,44 @@ paths:
                     pull_request_name: Add search
                     author_id: u1
                     status: OPEN
+
+  /healthz:
+    get:
+      tags: [Health]
+      summary: Проверить работоспособность сервиса
+      responses:
+        '200':
+          description: Сервис работает
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+              example:
+                status: "OK"
+                
+  /stats/assignments:
+      get:
+        tags: [Stats]
+        summary: Получить статистику по количеству назначений на ревью
+        responses:
+          '200':
+            description: Успешный ответ со статистикой
+            content:
+              application/json:
+                schema:
+                  type: object
+                  required: [ stats ]
+                  properties:
+                    stats:
+                      type: array
+                      items:
+                        $ref: '#/components/schemas/UserAssignmentStats'
+                example:
+                  stats:
+                    - user_id: "u2"
+                      assignment_count: 7
+                    - user_id: "u3"
+                      assignment_count: 21
